Bug 656089 - Fix accessibility focus bug w/Windows magnifier. r=marco